// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`withFormValidation Form errors Are not shown if there are not errors 1`] = `
<WithFormValidation
  checkErrors={[Function]}
  onFieldDeregister={null}
  onSubmit={[Function]}
  onValidationChange={null}
>
  <Form
    onSubmit={[Function]}
  >
    <form
      onSubmit={[Function]}
    >
      <WithFieldValidation
        id="field"
        name="field1"
        onChange={null}
        t={[Function]}
        validators={Array []}
        value="1"
      >
        <Field
          error={false}
          id="field"
          name="field1"
          onChange={null}
          value="1"
        >
          <input
            id="field"
            name="field1"
            onChange={null}
            type="text"
            value="1"
          />
        </Field>
      </WithFieldValidation>
      <WithFeedbackValidation>
        <ValidationFeedback
          error=""
        />
      </WithFeedbackValidation>
    </form>
  </Form>
</WithFormValidation>
`;

exports[`withFormValidation Form errors Are not shown until a field is changed 1`] = `
<WithFormValidation
  checkErrors={[Function]}
  onFieldDeregister={null}
  onSubmit={[Function]}
  onValidationChange={null}
>
  <Form
    onSubmit={[Function]}
  >
    <form
      onSubmit={[Function]}
    >
      <WithFieldValidation
        id="field"
        name="field1"
        onChange={null}
        t={[Function]}
        validators={Array []}
        value="1"
      >
        <Field
          error={false}
          id="field"
          name="field1"
          onChange={null}
          value="1"
        >
          <input
            id="field"
            name="field1"
            onChange={null}
            type="text"
            value="1"
          />
        </Field>
      </WithFieldValidation>
      <WithFeedbackValidation>
        <ValidationFeedback
          error=""
        />
      </WithFeedbackValidation>
    </form>
  </Form>
</WithFormValidation>
`;

exports[`withFormValidation Form errors Should be shown if when form is submitted 1`] = `
<WithFormValidation
  checkErrors={[Function]}
  onFieldDeregister={null}
  onSubmit={[Function]}
  onValidationChange={null}
>
  <Form
    onSubmit={[Function]}
  >
    <form
      onSubmit={[Function]}
    >
      <WithFeedbackValidation>
        <ValidationFeedback
          error=""
        />
      </WithFeedbackValidation>
    </form>
  </Form>
</WithFormValidation>
`;

exports[`withFormValidation Form errors Should not be shown if form was not submmited 1`] = `
<WithFormValidation
  checkErrors={[Function]}
  onFieldDeregister={null}
  onSubmit={[Function]}
  onValidationChange={null}
>
  <Form
    onSubmit={[Function]}
  >
    <form
      onSubmit={[Function]}
    >
      <WithFeedbackValidation>
        <ValidationFeedback
          error="There are errors"
        >
          <div
            className="ValidationFeedback"
            data-component="ValidationFeedback"
          >
            error
            <BannerAlert
              title="There are errors"
              type="error"
            >
              <section
                className="BannerAlert BannerAlert--error"
              >
                <pure(Info)
                  className="BannerAlert__error-icon"
                  style={
                    Object {
                      "fontSize": 18,
                    }
                  }
                >
                  <Info
                    className="BannerAlert__error-icon"
                    style={
                      Object {
                        "fontSize": 18,
                      }
                    }
                  >
                    <WithStyles(SvgIcon)
                      className="BannerAlert__error-icon"
                      style={
                        Object {
                          "fontSize": 18,
                        }
                      }
                    >
                      <SvgIcon
                        className="BannerAlert__error-icon"
                        classes={
                          Object {
                            "colorAction": "MuiSvgIcon-colorAction-4",
                            "colorDisabled": "MuiSvgIcon-colorDisabled-6",
                            "colorError": "MuiSvgIcon-colorError-5",
                            "colorPrimary": "MuiSvgIcon-colorPrimary-2",
                            "colorSecondary": "MuiSvgIcon-colorSecondary-3",
                            "fontSizeInherit": "MuiSvgIcon-fontSizeInherit-7",
                            "root": "MuiSvgIcon-root-1",
                          }
                        }
                        color="inherit"
                        component="svg"
                        fontSize="default"
                        style={
                          Object {
                            "fontSize": 18,
                          }
                        }
                        viewBox="0 0 24 24"
                      >
                        <svg
                          aria-hidden="true"
                          className="MuiSvgIcon-root-1 BannerAlert__error-icon"
                          focusable="false"
                          style={
                            Object {
                              "fontSize": 18,
                            }
                          }
                          viewBox="0 0 24 24"
                        >
                          <g>
                            <path
                              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                            />
                          </g>
                        </svg>
                      </SvgIcon>
                    </WithStyles(SvgIcon)>
                  </Info>
                </pure(Info)>
                 
                <span>
                  There are errors
                </span>
                 
              </section>
            </BannerAlert>
          </div>
        </ValidationFeedback>
      </WithFeedbackValidation>
    </form>
  </Form>
</WithFormValidation>
`;

exports[`withFormValidation should render correctly 1`] = `
<WithFormValidation
  checkErrors={[Function]}
  onFieldDeregister={null}
  onSubmit={[Function]}
  onValidationChange={null}
>
  <Form
    onSubmit={[Function]}
  >
    <form
      onSubmit={[Function]}
    />
  </Form>
</WithFormValidation>
`;
